--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ekern <ekern@student.42lausanne.ch>        +#+  +:+       +#+         #
+#    By: angelo <marvin@42lausanne.ch>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/21 11:30:17 by ekern             #+#    #+#              #
-#    Updated: 2022/09/05 12:46:06 by ekern            ###   ########.fr        #
+#    Updated: 2022/09/06 12:11:34 by angelo           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
